--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,13 +134,21 @@ body {
 }
 
 .slider .text {
-    width: 300px;
-    height: 250px;
     text-align: center;
     padding: 30px 10px;
+    max-width: 100%;
+    height: auto;
     position: absolute;
-    left: 15%;
     top: 30%;
+    left: 15%;
+    right: 65%;
+    bottom: 30%;
+}
+
+@media (max-width:979px) {
+    .slider .text {
+        display: none;
+    }
 }
 
 .slider .text h1 {
@@ -207,8 +215,9 @@ body {
 /* ===Feature Categories=== */
 .feature {
     width: 1410px;
-    margin: auto;
-    padding-top: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100px;
     max-width: 100%;
     height: auto;
 }
@@ -255,4 +264,56 @@ body {
     font-weight: 500;
     border-radius: 25px;
     background: white;
+}
+
+/* ===Trending this week=== */
+.trending {
+    width: 1410px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100px;
+    max-width: 100%;
+    height: auto;
+}
+
+.trending .title {
+    font-size: 45px;
+    text-align: center;
+}
+
+.trending nav {
+    margin-top: 40px;
+    margin-left: 33%; /*fix sau*/
+}
+
+.trending nav ul {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.trending nav ul li {
+    padding: 0 25px;
+}
+
+.trending nav a {
+    color: black;
+    text-shadow: 1px 0 0 currentColor;
+}
+
+.trending .products {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 40px;
+}
+
+.trending .products .text {
+    margin-top: 15px;
+}
+
+.trending .products .text p {
+    margin-top: 8px;
+}
+
+.trending .products .text img {
+    margin-top: 8px;
 }
