--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -240,7 +240,7 @@ nav .icon .minicart {
     right: -30px;
     /* animation: slideInleft ease 0.3s; */
     z-index: 100;
-    /* display: none; */
+    display: none;
 }
 
 /* @keyframes slideInleft {
