--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,10 @@ html {
     /* width: 1920px; */
 }
 
+
+/* === Pseudo =============== */
 :root {
+    /* == Color === */
     --black: #111111;
     --white: #FFFFFF;
     --gray-light: #DDDDDD;
@@ -12,6 +15,9 @@ html {
     --gray-dark: #555555;
     --orange-red: #D73F0F;
     --green: #26A66A;
+    --color-slider: #f6f6f6;
+    /* == Height == */
+    --height-slider: 55rem;
 }
 
 /* === Background Color =============== */
@@ -95,6 +101,11 @@ html {
     position: absolute;
 }
 
+/* === Overflow Hidden ================= */
+.overflow-hidden {
+    overflow: hidden !important;
+}
+
 /*=== Text =================*/
 .text-center {
     text-align: center;
@@ -158,6 +169,11 @@ html {
     align-items: center;
 }
 
+/*=== Rounded =================*/
+.rounded-circle-35 {
+    border-radius: 3.5rem;
+}
+
 /* === Padding Top ========= */
 .pt-14 {
     padding-top: 1.4rem;
@@ -175,6 +191,10 @@ html {
     padding-bottom: 1.2rem;
 }
 
+.pb-25 {
+    padding-bottom: 2.5rem;
+}
+
 .pb-26 {
     padding-bottom: 2.6rem;
 }
@@ -190,13 +210,21 @@ html {
     padding-right: 2rem;
 }
 
+.px-26 {
+    padding-left: 2.6rem;
+    padding-right: 2.6rem;
+}
+
 .px-30 {
     padding-left: 3rem;
     padding-right: 3rem;
 }
 
 /* === Padding Y ========= */
-
+.py-23 {
+    padding-top: 2.3rem;
+    padding-bottom: 2.3rem;
+}
 
 /* === Margin Top ========= */
 
@@ -230,7 +258,10 @@ html {
 }
 
 /* === Margin X ========= */
-
+.mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+}
 
 /* === Margin Y ========= */
 
@@ -239,16 +270,23 @@ html {
 
 
 /* === Left ========= */
-
+.left-30 {
+    left: 3rem;
+}
 
 /* === Bottom ========= */
-
+.bottom-23 {
+    bottom: 2.3rem;
+}
 
 /* === Right ========= */
 .right-19 {
     right: 1.9rem;
 }
 
+.right-30 {
+    right: 3rem;
+}
 /* === Line Height ========= */
 .lh {
     line-height: 100%;
@@ -265,6 +303,10 @@ html {
 
 .fs-16 {
     font-size: 1.6rem;
+}
+
+.fs-18 {
+    font-size: 1.8rem;
 }
 
 /* === Font Weight ========= */
@@ -287,66 +329,52 @@ html {
     height: 0.1rem;
 }
 
-/*  */
-
-@media screen and (min-width: 992px) {
-    .d-lg-none {
-        display: none;
-    }
-
-    .d-lg-block {
-        display: block;
-    }
-
-    .gap-lg-15 {
-        gap: 1.5rem;
-    }
-
-    .gap-lg-20 {
-        gap: 2rem;
-    }
-    
-    .justify-content-lg-start {
-        justify-content: start;
-    }
-    
-    .pt-lg-24 {
-        padding-top: 2.4rem;
-    }
-
-    .pr-lg-10 {
-        padding-right: 1rem;
-    }
-
-
-    .px-lg-30 {
-        padding-left: 3rem;
-        padding-right: 3rem;
-    }
-
-    .mr-lg-50 {
-        margin-right: 5rem;
-    }
+/* === Slider ==================== */
+.slider {
+    width: 100%;
+    height: var(--height-slider);
+    background-color: var(--color-slider);
 }
 
-@media screen and (min-width: 1400px) {
-    .d-xxl-block {
-        display: block;
-    }
+.img-slide {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: 53% center;
+}
 
-    .d-xxl-flex {
-        display: flex;
-    }
-    
-    .gap-xxl-20 {
-        gap: 2rem;
-    }
-    
-    .gap-xxl-30 {
-        gap: 3rem;
-    }
+.slider-prev, 
+.slider-next {
+    top: 50%;
+    transform: translateY(-50%);
+    border-radius: 50%;
+}
 
-    .mr-xxl-95 {
-        margin-right: 9.5rem;
-    }
+.slider-prev:hover, 
+.slider-next:hover {
+    background-color: var(--black);
+    color: var(--white);
+}
+
+.slider-dots {
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.dot {
+    height: 0.8rem;
+    width: 0.8rem;
+    margin: 0.5rem;
+    background-color: var(--gray-medium);
+    border-radius: 50%;
+    display: inline-block;
+}
+
+.dot:hover {
+    background-color: var(--gray-dark);
+}
+
+.dot.active {
+    background-color: var(--black);
 }
